--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # Basic Information 
-title: Your Name
+title: Runlong Cao(曹润龙)
 position: Ph.D. Student
-affiliation: Your Affiliation
-email: yourname (at) example.edu
+affiliation: Nanjing University of Science and Technology
+email: crl1567@163.com
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
 keywords: minimal light
-description: The Minimal Light is a simple and elegant jekyll theme for academic personal homepage.
-canonical: https://minimal-light-theme.yliu.me/
+description: Runlong Cao's personal homepage.
+canonical: https://RainloongCao.github.io/
 
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
