--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Basic Information 
 title: Runlong Cao(曹润龙)
-position: Ph.D. Student
+position: Master Student
 affiliation: Nanjing University of Science and Technology
 email: crl1567@163.com
 
