--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ canonical: https://RainloongCao.github.io/
 
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
-google_scholar: https://scholar.google.com/
+google_scholar: https://scholar.google.com.hk/citations?view_op=list_works&hl=zh-CN&hl=zh-CN&user=Jz5V0JMAAAAJ
 cv_link: assets/files/curriculum_vitae.pdf
-github_link: https://github.com/
+github_link: https://github.com/RainloongCao
 linkedin: https://www.linkedin.com/
 twitter: https://twitter.com/
 
