--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Basic Information 
 title: Runlong Cao(曹润龙)
 position: Master Student
-affiliation: Huzhou University
+affiliation: Huzhou University and have just been admitted to Nanjing University of Science and Technology.
 email: crl1567@163.com
 
 # Search Engine Optimization (SEO)
