--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Basic Information 
 title: Runlong Cao(曹润龙)
-position: Master Student
+position: Ph.D in Computer Science
 affiliation: Huzhou University and have just been admitted to Nanjing University of Science and Technology.
 email: crl1567@163.com, 2022388202@stu.zjhu.edu.cn
 
