--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Runlong Cao(曹润龙)
 position: Ph.D in Computer Science
 affiliation: Nanjing University of Science and Technology.
-email: crl1567@163.com, 2022388202@stu.zjhu.edu.cn
+email: rainloongcao@njust.edu.cn, crl1567@163.com, 2022388202@stu.zjhu.edu.cn
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
